portfolio/k8s/demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    name: demo
    environment: demo
    app.kubernetes.io/part-of: correlation-station
